[#182] Fix: "myProfile contains (isNew, userActiveStatus)"
마이 프로필 조회 시 usNew, userActiveStatus 응답 포함

Resolves: #182
Ref: None
Related to: None